tools/crates/vendor/toml_edit/tests/fixtures/invalid/control/rawmulti-del.stderr
TOML parse error at line 1, column 24
  |
1 | rawmulti-del  = '''null'''
  |                        ^
invalid multiline literal string
